--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file("capstoneKey.jks")
+            storeFile file("app/capstoneKey.jks")
             storePassword "password"
             keyAlias "fractalwizz_capstone"
             keyPassword "password"
@@ -37,7 +37,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.google.android.gms:play-services:9.0.2'
+    compile 'com.google.android.gms:play-services-ads:9.0.2'
+    compile 'com.google.android.gms:play-services-location:9.0.2'
     compile 'com.android.support:design:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
